--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 
 
 
-    <com.team.roots.NonSwipeableViewPager
+    <com.team.r00ts.NonSwipeableViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/login_container"
 
