--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -53,7 +53,8 @@
                 android:layout_width="match_parent" android:layout_height="wrap_content" android:visibility="invisible"
 
                 />
-            <com.team.roots.MyClearEditText android:id="@+id/loginedittext" android:layout_width="match_parent"
+            <com.team.r00ts.MyClearEditText
+                android:id="@+id/loginedittext" android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:hint="@string/prompt_id"
                 android:imeOptions="actionGo"
                 android:maxLines="1" android:singleLine="true"
@@ -67,7 +68,8 @@
                 android:cursorVisible="false"
                 android:selectAllOnFocus="false" />
 
-           <com.team.roots.MyClearEditText  android:id="@+id/counselor_login_edittext_username" android:layout_width="match_parent"
+           <com.team.r00ts.MyClearEditText
+               android:id="@+id/counselor_login_edittext_username" android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:hint="@string/prompt_email"
                 android:imeOptions="actionNext"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_triple"
@@ -86,7 +88,8 @@
                android:focusable="true"
                android:inputType="textEmailAddress" />
 
-            <com.team.roots.MyClearEditText android:id="@+id/counselor_login_edittext_password" android:layout_width="match_parent"
+            <com.team.r00ts.MyClearEditText
+                android:id="@+id/counselor_login_edittext_password" android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:hint="@string/prompt_password"
                 android:imeOptions="actionGo" android:inputType="textVisiblePassword"
                  android:singleLine="true"
